Fixes display issue with the Join button on mobile.

--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -411,7 +411,7 @@ html {
 
           .header-nav {
             li {
-              display: block !important;
+              // display: block !important;
               margin-bottom: 20px !important;
               &:last-child{
                 margin: 0 0 20px 0 !important;
